# kde-thumbnailer-wings3d

./: CMakeLists.txt  README  main.cpp  test.wings  wings-thumbnailer-kde.desktop  wings_thumbnailer.kdev4  wingscreator.cpp  wingscreator.h
.kdev4/: wings_thumbnailer.kdev4
debian/: changelog  control  rules
